first draft of tutorial looking at modifying the standard shiny template to make a histogram

--- a/tutorial.Rmd
+++ b/tutorial.Rmd
@@ -27,24 +27,29 @@ biocLite("breastCancerNKI")
 - Rstudio have a good collection of tutorial videos:- [LINK](http://shiny.rstudio.com/tutorial/)
 - The [Shiny showcase](https://www.rstudio.com/products/shiny/shiny-user-showcase/)
 - A [Shiny cheatsheet](http://shiny.rstudio.com/articles/cheatsheet.html) to print off and pin to your desk
+- Shiny Exercises [Part 1](http://r-exercises.com/2016/12/12/building-shiny-app-exercises-part-1/) and [Part 2](http://r-exercises.com/2016/12/18/building-shiny-app-exercises-part-2/)
 
-## What is Shiny (and what Shiny isn't)?
+## What is Shiny
 
 - A way to run R code interactively
 - A great way of letting others access your data without requiring Bioinformatics skills
+- A way of building web portals without requiring javascript or other technologies
 - But not a substitute for an interface such as RStudio
 
 ## How have we used Shiny in the C.I.
 
-- [Running a statistics course](http://bioinformatics.cruk.cam.ac.uk/stats/TwoSampleTest/)
-- [A data portal]()
+- [Demonstrating statistical concepts](http://bioinformatics.cruk.cam.ac.uk/stats/TwoSampleTest/)
+- [A data portal for breast cancer models](http://caldaslab.cruk.cam.ac.uk/bcape/)
+- [and a portal for Prostate Cancer](http://bioinformatics.cruk.cam.ac.uk/apps/camcAPP/)
 - [Demo at the Science Festival](http://bioinformatics.cruk.cam.ac.uk/apps/apps/mutation-demo/)
 
 # First look at a Shiny app
 
-***File*** -> ***New File*** -> ***Shiny web app***
+Create a new app with the following menus (call it `test` or something)
 
-You should get a file called `app.R`. Hit the ***Run App** Button should open something like the following in a new browser window. 
+**File** -> **New File** -> **Shiny web app**
+
+You should get a file called `app.R`. The R script defines the UI (user interface), code run by the server and ends with an instruction to run the app. Note that you might see some older Shiny apps that were defined in two separate files (`UI.R` and `server.R`). If you view this file in RStudio the option to run the app will appear in the toolbar. Hitting the **Run App** Button will create a new RStudio window this example app. You could also view in a web browser.
 
 ```{r echo=FALSE}
 
@@ -92,24 +97,453 @@ shinyApp(ui = ui, server = server)
 
 ```
 
-The R script defines the UI (user interface), code run by the server and ends with an instruction to run the app. Note that older Shiny apps were defined in two separate files (`UI.R` and `server.R`). 
 
-In this example app we are creating a histogram of a pre-defined dataset (`faithful`), with the user being able to specify how many bins to use in the histogram. The UI part of the script defines an argument `bins` that is passed to the function in the server function to define how the histogram is displayed. This is the basic principle of Shiny. A slider bar is used to choose a different value of `bins`, and the plot is automatically updated when a new value is selected. In the user interface we have control over the maximum and minimum values of `bins`, how to increment the values and the label used. The `shiny` library does the hard work of displaying the bar on the HTML page.
+
+In this example app we are creating a histogram of a pre-defined dataset (`faithful`), with the user being able to specify how many bins to use in the histogram. The UI part of the script defines an argument `bins` that is passed to the function in the server function to define how the histogram is displayed. This is the basic principle of Shiny. A slider bar is used to choose a different value of `bins`, and this value can be accessed as `input$bins` from within in the `server` function. The histogram itself is created by a `renderPlot` function and assigned to the value `output$distPlot`. In the `ui` function you will see that this plot appears in the main panel using the `plotOutput` function. The argument to `plotOutput` is `distPlot`; which was the variable that we assigned to the plot.
+
+## HTML and other formatting
+
+You can add other text to the sidebar in order to provide explanations and help to your app. HTML elements can be added by a number of functions that parallel common HTML tags. e.g. `h1`, `h2` for headers and `a` to create a hyperlink. The `helpText` function can also be used to add explanatory text below a particular input option. In the following code we add headers, some help text and a hyperlink to a reference about histograms. Images can also be added using the `img` function.
+
+```{r eval=FALSE}
+      ######
+      sidebarPanel(
+
+        h1("Data  Exploration"),
+        h2("The histogram"),
+         sliderInput("bins",
+                     "Number of bins:",
+                     min = 1,
+                     max = 50,
+                     value = 30),
+        helpText("This slider defines the number of bins to divided the data into"),
+        a("More about the histogram here", href="https://en.wikipedia.org/wiki/Histogram"),
+        br(),
+        p("App developed by University of Cambridge"),
+        img(src="http://www.cruk.cam.ac.uk/sites/all/themes/cambridge_theme/images/interface/main-logo-small.png")
+      ),
+      ######
+```
+
+
+```{r echo=FALSE}
+library(shiny)
+
+# Define UI for application that draws a histogram
+ui <- fluidPage(
+   
+   # Application title
+   titlePanel("Old Faithful Geyser Data"),
+   
+   # Sidebar with a slider input for number of bins 
+   sidebarLayout(
+      sidebarPanel(
+        h1("Data  Exploration"),
+        h2("The histogram"),
+         sliderInput("bins",
+                     "Number of bins:",
+                     min = 1,
+                     max = 50,
+                     value = 30),
+        helpText("This slider defines the number of bins to divided the data into"),
+        a("More about the histogram here", href="https://en.wikipedia.org/wiki/Histogram"),
+        br(),
+        p("App developed by University of Cambridge"),
+        img(src="http://www.cruk.cam.ac.uk/sites/all/themes/cambridge_theme/images/interface/main-logo-small.png")
+      ),
+      
+      # Show a plot of the generated distribution
+      mainPanel(
+         plotOutput("distPlot")
+      )
+   )
+)
+
+# Define server logic required to draw a histogram
+server <- function(input, output) {
+   
+   output$distPlot <- renderPlot({
+      # generate bins based on input$bins from ui.R
+      x    <- faithful[, 2] 
+      bins <- seq(min(x), max(x), length.out = input$bins + 1)
+      
+      # draw the histogram with the specified number of bins
+      hist(x, breaks = bins, col = 'darkgray', border = 'white')
+   })
+}
+
+# Run the application 
+shinyApp(ui = ui, server = server)
+
+```
 
 
 ## Inputs
 
+In the histogram example we saw the use of `sliderInput` which allows the user to select a numeric value between some lower and upper bound. When faced with new R functions it is usually a good idea to read the help page; `?sliderInput`. We also have control over the amount by which the values change when the user slides the bar with `step` and the text label displayed above the bar.
+
+Other types of input are available for us to choose from:-
+
 - `selectInput`
+    + select a value from a drop-down box
 - `checkboxInput`
+    + set a value to true or false
 - `radioButons`
+    + select a value 
 - `textInput`
+    + type some text
+- `dateInput`
+    + select a date
+- `fileInput`
+    + special input to upload a file
 
-## Exercise
+To add an extra input, we need to add it as an argument to the `sidebarPanel` function. Lets say that we wanted to add the ability to change the colour of our histogram to either red, green or blue. We could do this using a `radioButton`. The order of the arguments to `sidebarPanel` dictates the order in which the various elements are rendered in the HTML.
 
-- Create a dropdown box to select either red, blue or green histogram
-- Create a textbox to define the title on the plot
+```{r eval=FALSE}
+      ######
+      sidebarPanel(
+
+        h1("Data  Exploration"),
+        h2("The histogram"),
+        radioButtons("colour","Colour of histogram",choices=c("red","green","blue"),selected="red"),
+         sliderInput("bins",
+                     "Number of bins:",
+                     min = 1,
+                     max = 50,
+                     value = 30),
+        helpText("This slider defines the number of bins to divided the data into"),
+        a("More about the histogram here", href="https://en.wikipedia.org/wiki/Histogram"),
+        br(),
+        p("App developed by University of Cambridge"),
+        img(src="http://www.cruk.cam.ac.uk/sites/all/themes/cambridge_theme/images/interface/main-logo-small.png")
+      ),
+      ######
+```
+
+To actually access the value that has been selected, we need to modify the code in the `server` section of our `app.R` script. On the line that creates the histogram we merely change the `col` argument from `darkgray` to `input$colour`.
+
+```{r eval=FALSE}
+server <- function(input, output) {
+   
+   output$distPlot <- renderPlot({
+      # generate bins based on input$bins from ui.R
+      x    <- faithful[, 2] 
+      bins <- seq(min(x), max(x), length.out = input$bins + 1)
+      
+      # draw the histogram with the specified number of bins
+      hist(x, breaks = bins, col = input$colour, border = 'white')
+   })
+}
+
+```
+
+
+```{r echo=FALSE}
+library(shiny)
+
+# Define UI for application that draws a histogram
+ui <- fluidPage(
+   
+   # Application title
+   titlePanel("Old Faithful Geyser Data"),
+   
+   # Sidebar with a slider input for number of bins 
+   sidebarLayout(
+      sidebarPanel(
+        h1("Data  Exploration"),
+        h2("The histogram"),
+        radioButtons("colour","Colour of histogram",choices=c("red","green","blue"),selected="red"),
+         sliderInput("bins",
+                     "Number of bins:",
+                     min = 1,
+                     max = 50,
+                     value = 30),
+        helpText("This slider defines the number of bins to divided the data into"),
+        a("More about the histogram here", href="https://en.wikipedia.org/wiki/Histogram"),
+        br(),
+        p("App developed by University of Cambridge"),
+        img(src="http://www.cruk.cam.ac.uk/sites/all/themes/cambridge_theme/images/interface/main-logo-small.png")
+      ),
+      
+      # Show a plot of the generated distribution
+      mainPanel(
+         plotOutput("distPlot")
+      )
+   )
+)
+
+# Define server logic required to draw a histogram
+server <- function(input, output) {
+   
+   output$distPlot <- renderPlot({
+      # generate bins based on input$bins from ui.R
+      x    <- faithful[, 2] 
+      bins <- seq(min(x), max(x), length.out = input$bins + 1)
+      
+      # draw the histogram with the specified number of bins
+
+      
+      hist(x, breaks = bins, col = input$colour, border = 'white',main=input$title)
+   })
+   
+}
+
+# Run the application 
+shinyApp(ui = ui, server = server)
+
+```
+
+
+## Exercises
+
+- Allow the user to define the title on the plot by adding a `textInput`
+    + HINT: the `main` argument to the `hist` function lets you set the plot title.
+- The choice of red, green or blue is somewhat limiting. Create a dropdown box to allow the user to choose from any of the pre-defined colours in R. (HINT: the function `colours` returns the names of all valid colours as a vector)
+- OPTIONAL:- use `numericInput` boxes to allow the user to define a colour using its red, green and blue values.
+    + the `rgb` function will convert a set of numeric values into a hexademical string that can be used as an argument for plotting.
+    + the RGB value for red is `255,0,0`
+- create a tickbox to switch between specifying colour by name or rgb values.
 
 ## Outputs
 
-# Sharing your app
+Similar to the way we can add now inputs as arguments to `sidebarPanel`, we can add new outputs by adding new arguments to `mainPanel`. Let's say we want to show a boxplot of the data in addition to the histogram. First we add a call to `plotOutput` in the `mainPanel` code.
+
+
+
+```{r eval=FALSE}
+
+      # Show a plot of the generated distribution
+      mainPanel(
+         plotOutput("distPlot"),
+         plotOutput("boxPlot")
+      )
+   )
+)
+
+```
+
+We then need to modify the server script to create the `boxPlot` object that we want to display. Having already created a histogram, we should just need a function that runs the command `boxplot(x)`.
+
+However, the following code is incorrect. Can you work out why?
+
+```{r eval=FALSE}
+server <- function(input, output) {
+   
+   output$distPlot <- renderPlot({
+      # generate bins based on input$bins from ui.R
+      x    <- faithful[, 2] 
+      bins <- seq(min(x), max(x), length.out = input$bins + 1)
+      
+      # draw the histogram with the specified number of bins
+
+      
+      hist(x, breaks = bins, col = input$colour, border = 'white',main=input$title)
+   })
+   
+   output$boxPlot <- renderPlot({
+
+       boxplot(x)
+
+   })
+}
+```
+
+```{r echo=FALSE}
+library(shiny)
+
+# Define UI for application that draws a histogram
+ui <- fluidPage(
+   
+   # Application title
+   titlePanel("Old Faithful Geyser Data"),
+   
+   # Sidebar with a slider input for number of bins 
+   sidebarLayout(
+      sidebarPanel(
+        h1("Data  Exploration"),
+        h2("The histogram"),
+        radioButtons("colour","Colour of histogram",choices=c("red","green","blue"),selected="red"),
+         sliderInput("bins",
+                     "Number of bins:",
+                     min = 1,
+                     max = 50,
+                     value = 30),
+        helpText("This slider defines the number of bins to divided the data into"),
+        a("More about the histogram here", href="https://en.wikipedia.org/wiki/Histogram"),
+        br(),
+        p("App developed by University of Cambridge"),
+        img(src="http://www.cruk.cam.ac.uk/sites/all/themes/cambridge_theme/images/interface/main-logo-small.png")
+      ),
+      
+      # Show a plot of the generated distribution
+      mainPanel(
+         plotOutput("distPlot"),
+         verbatimTextOutput("summary"),
+         plotOutput("boxPlot")
+      )
+   )
+)
+
+# Define server logic required to draw a histogram
+server <- function(input, output) {
+   
+   output$distPlot <- renderPlot({
+      # generate bins based on input$bins from ui.R
+      x    <- faithful[, 2] 
+      bins <- seq(min(x), max(x), length.out = input$bins + 1)
+      
+      # draw the histogram with the specified number of bins
+
+      
+      hist(x, breaks = bins, col = input$colour, border = 'white',main=input$title)
+   })
+   
+   output$summary <- renderPrint({
+     x <- faithful[,2]
+     summary(x)
+   })
+   
+   output$boxPlot <- renderPlot({
+      x <- faithful[,2]
+      boxplot(x,horizontal = TRUE)
+     
+   })
+}
+
+# Run the application 
+shinyApp(ui = ui, server = server)
+
+```
+
+
+Aside from a plot, other types of output include
+
+- `renderText`
+- `renderPrint`
+- `renderDataTable`
+- `renderTable`
+
+
+We will add a numerical summary of our dataset and a message to report the number of bins that were selected. These elements can be added to the `mainPanel` using `verbatimTextOutput` and `textOutput` respectively:-
+
+```{r eval=FALSE}
+
+      # Show a plot of the generated distribution
+      mainPanel(
+         textOutput("chosenBins"),
+         plotOutput("distPlot"),
+         verbatimTextOutput("summary"),
+         plotOutput("boxPlot")
+      )
+   )
+)
+
+```
+
+In the `server` script we include the code to compute the relevant outputs.
+
+```{r eval=FALSE}
+server <- function(input, output) {
+     x    <- faithful[, 2] 
+         
+   output$distPlot <- renderPlot({
+      # generate bins based on input$bins from ui.R
+      bins <- seq(min(x), max(x), length.out = input$bins + 1)
+      
+      # draw the histogram with the specified number of bins
+
+      
+      hist(x, breaks = bins, col = input$colour, border = 'white',main=input$title)
+   })
+   
+   output$boxPlot <- renderPlot({
+
+       boxplot(x)
+
+   })
+   
+   output$summary <- renderPrint({
+     summary(x)
+   })
+   
+   output$chosenBins <- renderText({
+     
+     paste("Number of bins to draw histogram", input$bins)
+     
+   })
+}
+```
+
+```{r echo=FALSE}
+library(shiny)
+
+# Define UI for application that draws a histogram
+ui <- fluidPage(
+   
+   # Application title
+   titlePanel("Old Faithful Geyser Data"),
+   
+   # Sidebar with a slider input for number of bins 
+   sidebarLayout(
+      sidebarPanel(
+        h1("Data  Exploration"),
+        h2("The histogram"),
+        radioButtons("colour","Colour of histogram",choices=c("red","green","blue"),selected="red"),
+         sliderInput("bins",
+                     "Number of bins:",
+                     min = 1,
+                     max = 50,
+                     value = 30),
+        helpText("This slider defines the number of bins to divided the data into"),
+        a("More about the histogram here", href="https://en.wikipedia.org/wiki/Histogram"),
+        br(),
+        p("App developed by University of Cambridge"),
+        img(src="http://www.cruk.cam.ac.uk/sites/all/themes/cambridge_theme/images/interface/main-logo-small.png")
+      ),
+      
+      # Show a plot of the generated distribution
+      mainPanel(
+         textOutput("chosenBins"),
+         plotOutput("distPlot"),
+         verbatimTextOutput("summary"),
+         plotOutput("boxPlot")
+      )
+   )
+)
+
+# Define server logic required to draw a histogram
+server <- function(input, output) {
+    x    <- faithful[, 2] 
+   output$distPlot <- renderPlot({
+      # generate bins based on input$bins from ui.R
+
+      bins <- seq(min(x), max(x), length.out = input$bins + 1)
+      
+      # draw the histogram with the specified number of bins
+
+      
+      hist(x, breaks = bins, col = input$colour, border = 'white',main=input$title)
+   })
+   
+   output$summary <- renderPrint({
+     summary(x)
+   })
+   
+   output$boxPlot <- renderPlot({
+      boxplot(x,horizontal = TRUE)
+     
+   })
+   
+      output$chosenBins <- renderText({
+     
+     paste("Number of bins to draw histogram", input$bins)
+     
+   })
+   
+}
+
+# Run the application 
+shinyApp(ui = ui, server = server)
+
+```
 
